--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flask_react",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://quickclearapi1.onrender.com",
+  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
