--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "flask_react",
   "version": "0.1.0",
   "private": true,
- 
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +12,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-hooks-useform": "^0.1.86",
+    "react-loader-spinner": "^5.3.4",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
