--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "web-vitals": "^2.1.4",
-    "proxy": "http://127.0.0.1:5000"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
